# academicguard

./: .gitignore  HOWTO.md  LICENSE  README.md  pyproject.toml
academicguard/: __init__.py  api.py  cli.py
academicguard/core/: __init__.py  document.py  report.py
academicguard/detectors/: __init__.py  ai_detector.py  grammar.py  plagiarism.py
academicguard/integrations/: __init__.py  external.py
academicguard/style/: __init__.py  acm.py  base.py  bcs.py  elsevier.py  ieee.py  iet.py
tests/: test_academicguard.py
