[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academicguard"
version = "1.0.0"
description = "Open-source academic writing integrity toolkit: AI detection, plagiarism, grammar, and venue style checking (IEEE, Elsevier, ACM, IET, BCS)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AcademicGuard Contributors" }]
keywords = ["ai-detection", "plagiarism", "grammar", "academic-writing", "ieee", "elsevier", "acm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "transformers>=4.40",
    "torch>=2.0",
    "language-tool-python>=2.7",
    "datasketch>=1.6",
    "spacy>=3.7",
    "python-docx>=1.1",
    "pdfminer.six>=20221105",
    "latex2text>=0.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "numpy>=1.26",
    "click>=8.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "black", "ruff", "mypy"]
pdf-export = ["weasyprint>=62.0"]
openai-detect = ["openai>=1.0"]

[project.scripts]
academicguard = "academicguard.cli:app"
ag = "academicguard.cli:app"

[project.urls]
Homepage = "https://github.com/academicguard/academicguard"
Documentation = "https://academicguard.readthedocs.io"
Issues = "https://github.com/academicguard/academicguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["academicguard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
